contracts/protocol/stellar/contracts/macro-integration-tests/tests/ui/contract_impl/fail/not_impl_item.stderr
error: custom attribute panicked
 --> tests/ui/contract_impl/fail/not_impl_item.rs:3:1
  |
3 | #[common_macros::contract_impl]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: failed to parse impl block: expected `impl`
